utp/compII/toscal/tests/semantic/fail/undeclared-variable.pas
program complain_on_undeclared_variable_simple;
var a, b, c : integer;

begin
	b := a + c;
	a := c + d;
end.
